--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
     "react-responsive-carousel": "^3.2.23",
